Frontpage columns jump into place [#473 state:resolved]

--- a/theme/_css/layout.less
+++ b/theme/_css/layout.less
@@ -18,9 +18,6 @@
 		position: relative;
 		margin-bottom: 0px !important;
     }
-    .newsbox.content-single, .newsbox.content-double {
-	    visibility: visible;
-    }
 	
     .newsbox {
     	visibility: hidden;
